deploy/istio/peer-authentication.yaml
apiVersion: networking.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: cfzt
spec:
  mtls:
    mode: STRICT
